fix : empty align

--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -53,5 +53,9 @@
             align-items: center;
             z-index: 9999;
         }
+
+        .empty {
+            margin-top: 9em;
+        }
     }
 }
